--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -4,9 +4,9 @@
     <groupId>tailmaster</groupId>
     <artifactId>tailmaster</artifactId>
     <packaging>jar</packaging>
-    <version>1.0</version>
+    <version>0.4</version>
     <name>tailmaster</name>
-    <url>http://maven.apache.org</url>
+    <url>http://tailmaster.googlecode.com</url>
     <dependencies>
         <dependency>
             <groupId>sshtools</groupId>
@@ -18,22 +18,6 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.1</version>
         </dependency>
-        <dependency>
-            <groupId>commons-configuration</groupId>
-            <artifactId>commons-configuration</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.apache.derby</groupId>-->
-        <!--<artifactId>derbyclient</artifactId>-->
-        <!--<version>10.2.2.0</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
@@ -61,6 +45,29 @@
                         <phase>verify</phase>
                         <goals>
                             <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                      <manifest>
+                        <mainClass>tailmaster.TailMaster</mainClass>
+                      </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
                         </goals>
                     </execution>
                 </executions>
