--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -14,6 +14,11 @@
             <version>0.2.2</version>
         </dependency>
         <dependency>
+            <groupId>sshtools</groupId>
+            <artifactId>j2ssh-common</artifactId>
+            <version>0.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.1.1</version>
