--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -4,7 +4,7 @@
     <groupId>tailmaster</groupId>
     <artifactId>tailmaster</artifactId>
     <packaging>jar</packaging>
-    <version>0.5</version>
+    <version>0.5.1-SNAPSHOT</version>
     <name>tailmaster</name>
     <url>http://tailmaster.googlecode.com</url>
     <dependencies>
